--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,9 +51,9 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 1em;
   line-height: 1.5;
-  color: #6d6d6d;
+  color: #ffffff;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-  background: #e7e7e7 url(../images/body-bg.png) 0 0 repeat;
+  background-color: #778899;
 }
 
 a {
